# ml-ops-wildlife

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: yolo_data.yml
models/: .gitignore  retina.pt.dvc  yolov11s.pt.dvc  yolov5s.pt.dvc
my_utils/: dataset_loader.py
research/: data_inspector.ipynb  model_evaluation.ipynb  retina_model.ipynb  retina_model_evaluation.ipynb
src/train/: dataset_loader.py  train_retina.py
