[tool.poetry]
name = "ml-ops-wildlife"
version = "0.1.0"
description = ""
authors = ["Mihai Anca <mihai.anca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.1.3"
torch = "^2.5.1"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
black = "^24.10.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

