[tool.poetry]
name = "ml-ops-wildlife"
version = "0.1.0"
description = ""
authors = ["Mihai Anca <mihai.anca13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.1"
numpy = "1.26.4"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
black = "^24.10.0"
pre-commit = "^4.0.1"
tqdm = "^4.67.0"
mlflow = "^2.17.2"
ultralytics = "^8.3.31"
gitpython = ">=3.1.30"
opencv-python = ">=4.1.1"
psutil = "^6.1.0"
pyyaml = ">=5.3.1"
requests = ">=2.32.2"
scipy = ">=1.4.1"
thop = ">=0.1.1"
seaborn = ">=0.11.0"
setuptools = ">=70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

